--- a/.github/workflows/master_disasterprepweb.yml
+++ b/.github/workflows/master_disasterprepweb.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP app to Azure Web App - DisasterPrepWeb
 
 on:
@@ -16,23 +13,25 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup MSBuild path
-        uses: microsoft/setup-msbuild@v1.0.2
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '6.0.x'  # Replace with your .NET Core version
 
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.0.5
+      - name: Restore dependencies
+        run: dotnet restore
 
-      - name: Restore NuGet packages
-        run: nuget restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
 
       - name: Publish to folder
-        run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
+        run: dotnet publish --configuration Release --no-build --output ./published
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: ASP-app
-          path: '/published/**'
+          path: ./published
 
   deploy:
     runs-on: windows-latest
