--- a/DisasterPrepTest.csproj
+++ b/DisasterPrepTest.csproj
@@ -1,9 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include=".gitattributes" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\.gitignore" />
+    <None Include="wwwroot\Build\.gitattributes" />
+    <None Include="wwwroot\Build\DisasterPrep_WebBuild.data" />
+    <None Include="wwwroot\Build\DisasterPrep_WebBuild.framework.js" />
+    <None Include="wwwroot\Build\DisasterPrep_WebBuild.loader.js" />
+    <None Include="wwwroot\Build\DisasterPrep_WebBuild.wasm" />
+    <None Include="wwwroot\index.html" />
+    <None Include="wwwroot\LICENSE" />
+    <None Include="wwwroot\TemplateData\favicon.ico" />
+    <None Include="wwwroot\TemplateData\fullscreen-button.png" />
+    <None Include="wwwroot\TemplateData\progress-bar-empty-dark.png" />
+    <None Include="wwwroot\TemplateData\progress-bar-empty-light.png" />
+    <None Include="wwwroot\TemplateData\progress-bar-full-dark.png" />
+    <None Include="wwwroot\TemplateData\progress-bar-full-light.png" />
+    <None Include="wwwroot\TemplateData\style.css" />
+    <None Include="wwwroot\TemplateData\unity-logo-dark.png" />
+    <None Include="wwwroot\TemplateData\unity-logo-light.png" />
+    <None Include="wwwroot\TemplateData\webgl-logo.png" />
+  </ItemGroup>
 
 </Project>
